[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.black]
line-length = 79

[tool.isort]
include_trailing_comma = "True"
multi_line_output = 3
lines_between_types = 1
line_length = 79
known_first_party = "src,settings"
default_section = "THIRDPARTY"

# Feature still not merged
[tool.mypy]
    [tool.mypy-numpy]
    ignore_missing_imports = "True"
    [tool.mypy-panflute]
    ignore_missing_imports = "True"
    [tool.mypy-pandas]
    ignore_missing_imports = "True"
    [tool.mypy-deap]
    ignore_missing_imports = "True"
    [tool."mypy-sklearn.*"]
    ignore_missing_imports = "True"
    [tool."mypy-keras.*"]
    ignore_missing_imports = "True"
    [tool.mypy-skorch]
    ignore_missing_imports = "True"
    [tool.mypy-evolutionary_search]
    ignore_missing_imports = "True"

[tool.pylint]
    [tool.pylint."MESSAGES CONTROL"]
    disable = "bad-continuation,duplicate-code,logging-fstring-interpolation"

[tool.coverage]
    [tool.coverage.report]
    exclude_lines = [
        "if __name__ == .__main__.:",
        "except KeyboardInterrupt:"
    ]
